2.6 (released xx.xx.xxxx)
  * fixed background downloading with 30x redirects
    Changed: wc/proxy/HttpProxyClient.py
  * merge upstream CVS changes of libjs (spidermonkey) as of 20031116
    Changed: libjs/*
  * do not quote HTML attributes in the parser
    Changed: wc/parser/htmllex.[lc]
  * quote all HTML attributes after filtering
    Changed: wc/filter/HtmlParser.py, wc/parser/htmllib.py

2.5 (released 15.11.2003)
  * updated blacklist filters
    Changed: config/blacklist*, config/bl2wc.py
  * make AllowRule a subclass of UrlRule
    Changed: wc/filter/rule/AllowRule.py, wc/filter/Blocker.py,
      templates/classic/macros/rules.html
  * remove unnecessary bits from the dns library
    Removed: wc/proxy/dns/{lazy,Base,win32dns}.py
    Changed: wc/proxy/dns/*.py
  * corrected the reversed google cache urls
    Changed: templates/classic/google.html
  * merge upstream CVS changes of libjs (spidermonkey) as of 20031114
    Changed: libjs/*
  * FILTER_REQUEST must have the complete request for filtering, not
    only the URL
    Changed: wc/proxy/HttpClient.py, wc/filter/Blocker.py
  * improved get_user():
    - does not use getlogin() anymore
    - checks the sanity of the username before returning it, since it
      is used as a filename part
    Changed: wc/daemon/__init__.py
  * get rid of sys.path.insert, use PYTHONPATH instead
    Changed: all scripts
  * filtered requests must change previously stored data
    Changed: wc/proxy/ClientServerMatchmaker.py
  * fixed the rule merging
    Changed: wc/update.py, wc/__init__.py
  * make parsing of <? ?> html more tolerant
    Changed: wc/parser/htmllex.[lc]
  * ignore self.mime type on error
    Changed: wc/proxy/HttpServer.py

2.4 (released 1.11.2003)
  * merge upstream CVS changes of libjs (spidermonkey) as of 20031101
    Changed: libjs/*
  * enabled persistent client connections
    Changed: wc/proxy/{HttpClient,Connection}.py
  * new connection logger for printing all sent/received connection