@@ -3,8 +3,7 @@
 <folder sid="wc.325" title="PICS ratings"
  desc="Contains rules deploying the Platform for Internet Content Selection (PICS)." oid="11">
 <pics sid="wc.324" title="PICS ratings"
- desc="Enabling this rule turns WebCleaner into a whitelist-based kids-safe proxy. Only sites which meet the specified rating criterias are displayed, blocked sites display an error message or the given default url. Websites which have no PICS rating can be configured by you after password authorization."
- disable="1">
+ desc="Enabling this rule turns WebCleaner into a whitelist-based kids-safe proxy. Only sites which meet the specified rating criterias are displayed, blocked sites display an error message or the given default url. Websites which have no PICS rating can be configured by you after password authorization.">
 <url>http://www.calvinandhobbes.com/</url>
 <service name="icra">
 <category name="badexample">1</category>
