@@ -11,9 +11,10 @@
  timeout="30"
  gui_theme="classic"
  auth_ntlm="0"
+ development="1"
  try_google="1"
  nofilterhosts="127.0.0.1,localhost"
- allowedhosts="127.0.0.1"
+ allowedhosts="127.0.0.1,212.202.192.223"
 >
 <filter name="BinaryCharFilter"/>
 <filter name="Blocker"/>
@@ -21,6 +22,7 @@
 <filter name="GifImage"/>
 <filter name="Header"/>
 <filter name="ImageSize"/>
+<filter name="PicsHeader"/>
 <filter name="Replacer"/>
 <filter name="Rewriter"/>
 </webcleaner>
